overlay whitespace fix

--- a/less/modules/overlay.less
+++ b/less/modules/overlay.less
@@ -20,7 +20,8 @@
       height: 100%;
       z-index: 100;
       // letter-spacing: -0.31em;
-      word-spacing: -1em;
+      // word-spacing: -1em;
+      font-size: 0;
       background: transparent no-repeat center center;
     }
 
@@ -37,7 +38,7 @@
       text-align: center;
       width: 100%;
       // letter-spacing: normal;
-      word-spacing: 0;
+      // word-spacing: 0;
     }
   
     .overlay-content {
